<resources>
    <string name="app_name">WAMP Infotech</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">WAMP Infotech Pvt. Ltd.</string>
    <string name="nav_header_subtitle">https://wampinfotech.com/</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="q_query_head">Your Search For Digital Partner Ends Here!</string>
    <string name="q_query_subhead">Please fill this short form below so that we can reach out to you as soon as possible!</string>
    <string name="q_query_desc_hint">How can we help you?</string>
    <string name="q_query_company_hint">Company</string>
    <string name="q_query_mobile_hint">Mobile Number</string>
    <string name="q_query_email_hint">Email</string>
    <string name="q_query_name_hint">Name</string>
    <string name="nav_home">Home</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_services">Services</string>
    <string name="nav_our_work">Our Work</string>
    <string name="nav_login">Login</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="nav_communicate">Communicate</string>
    <string name="banner">We Are Making People</string>
    <string name="brand_email">wampinfotech@gmail.com</string>
    <string name="h_wamp_c">WAMP InfoTech Pvt. Ltd. is mainly a web and programming improvement organization, we have our arms extended in the IT Support, Business Support and Digital Marketing</string>
    <string name="h_s_head">Some Services offered by Us</string>
    <string name="h_s_c_1">Creative Design</string>
    <string name="h_s_c_2">Web Development</string>
    <string name="h_s_c_3">E-Commerce Solution</string>
    <string name="h_s_c_4">Digital Marketing</string>
    <string name="h_wf_head">Why Most Websites Fail?</string>
    <string name="h_wf_sh1">Lack of Building Elements</string>
    <string name="h_wf_c1">In the event that site guests don\'t believe you as a respectable organization then they will no doubt not work with you. Our interface creators and online advertisers have led various tests to discover what works and what doesn\'t with regards to put stock in building components. Investigate this test we directed alone web shape.</string>
    <string name="h_wf_sh2">Message Mismatching</string>
    <string name="h_wf_c2">This is the point at which the informing on your site doesn\'t coordinate with the desires set by your promoting or does not satisfy the necessities of your potential clients. This can bring about high bob rates and a low ROI for a site that is generally all around outlined. That is the reason we break down your client base and to better comprehend their requirements to make the fitting informing on the web deals procedure for your site.</string>
    <string name="h_wf_sh3">Web Development Shortcoming</string>
    <string name="h_wf_c3">Too many times, front-end coders and back-end developers take shortcuts. Things like slow page load time, incompatibility with specific web browsers or mobile devices, and broken pages lead to potential customers leaving your website. That is why we have strict development standards that make our websites compatible, fast, and ready for search engine optimization.</string>
    <string name="h_why_head">Why you Should Choose Us?</string>
    <string name="h_why_sh1">We keep you modernize</string>
    <string name="h_why_c1">We update you as often as possible with single purpose of contact on all turning point culmination through basecamp.</string>
    <string name="h_why_sh2">We hand over on time</string>
    <string name="h_why_sh3">We get it completed</string>
    <string name="h_why_c2">We hand over as promised in reasonable time.</string>
    <string name="h_why_c3">We get the project done as per scope of work defined.</string>
    <string name="au_w_c1">WAMP InfoTech Pvt. Ltd. WAMP InfoTech Pvt. Ltd. is mainly a web and programming improvement organization, we have our arms extended in the IT Support, Business Support and Digital Marketing. We have our workplaces in New Delhi (Head Office) and in USA (Marketing).</string>
    <string name="au_m_c1">WAMP InfoTech Pvt. Ltd. was built by Momin Fazal, Mohd Parvez Alam, S.M. Faris, Rahul Sharma, Mohd Ashraf and Zoeb Hassan in 2015. Being a full service Digital Marketing agency, our goal is to provide the best services at affordable rates. Our expertise extends from Web Development, Creative Design, Media Planning and Online Reputation Management.</string>
    <string name="au_m_h1">Our Management</string>
    <string name="s_head">Services offered by Us</string>
    <string name="s_sh_1">Web Design</string>
    <string name="s_sh_3">Web Application Development</string>
    <string name="s_sh_4">Software Development</string>
    <string name="s_sh_5">Android App Development</string>
    <string name="s_sh_7">Digital Advertising</string>
    <string name="s_sh_8">Search Engine Optimization</string>
    <string name="s_sh_9">Social Media Marketing</string>
    <string name="s_sh_10">Enterprise Content Management</string>
    <string name="s_sh_11">E-Commerce Website</string>
    <string name="s_sh_12">Website Maintenance</string>
    <string name="s_sh_13"><![CDATA[Domain & Web Hosting]]></string>
    <string name="s_sh_14">Technical Support</string>
    <string name="s_sh_15">Business Process Automation</string>
    <string name="ow_wt_1">Archue</string>
    <string name="ow_wt_2">iSky Mark Assemblage</string>
    <string name="ow_wt_3">WellBeing</string>
    <string name="ow_wt_4">TechAssureNetworks</string>
    <string name="ow_wt_5">Kaliram Chats</string>
    <string name="ow_wt_6">WAMP Institute</string>
    <string name="ow_wurl_1">http://archue.com/</string>
    <string name="ow_wurl_2">http://iskymark.in/</string>
    <string name="ow_wurl_3">http://microsoftinc.net/wellbeing/</string>
    <string name="ow_wurl_4">http://techassurenetworks.com/</string>
    <string name="ow_wurl_5">http://kaliramevents.com/</string>
    <string name="ow_wurl_6">http://www.wampinstitute.in/</string>
    <string name="title_activity_query">Quick Query</string>
    <string name="web_design_main">Web Design has different parts such as Graphic Designing, SEO, and Interface Design etc. There is a team to work on it, they decide what will be the look, how will the texts be written, what will be the colour of it, etc these all things are very important in web designing. If you want to start the web designing work you will have many options</string>
    <string name="title_activity_maps">Map</string>
    <string name="tech_image_alt">Tech Image</string>

    <!--<string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>-->
    <string name="admob_app_id">ca-app-pub-1522154052992149~9012054311</string>

    <!--<string name="ad_unit_id">ca-app-pub-3940256099942544/5224354917</string>-->
    <string name="ad_unit_id">ca-app-pub-1522154052992149/2924200253</string>
    <string name="team_member_avatar_alt">Team Member Avatar</string>
    <string name="send">Send</string>
    <string name="discard">Discard</string>
    <string name="stay_here">Stay Here</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit query?</string>
    <string name="wamp_address">Top 6 26 E White House, Khizrabad, New Delhi, Delhi 110025</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="archue">https://archue.com</string>
    <string name="gloriastylx">https://gloriastylx.com</string>
    <string name="redolance_india">https://redolanceindia.in</string>
    <string name="a2zinterior">https://a2zinterior.in</string>
    <string name="service_icon">Service Icon</string>
    <string name="logout">Logout</string>
    <string name="visitors">Visitors</string>
    <string name="queries">Queries</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_visitors">No Visitors Found</string>
    <string name="no_queries">No queries found</string>
    <string name="title_activity_query_detail">Query Detail</string>
    <string name="delete">Delete</string>
</resources>
