<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ScrollPanel">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/large_gap">

        <TextView
            style="@style/MainHeadTitle"
            android:text="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_gap"
            android:text="@string/au_w_c1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            style="@style/MainHeadTitle"
            android:text="@string/au_m_h1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_gap"
            android:text="@string/au_m_c1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

</ScrollView>