<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ab_tm_avatar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:contentDescription="@string/team_member_avatar_alt"
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/ab_tm_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/default_gap"
        android:text="@string/app_name"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/ab_tm_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/default_gap"
        android:text="@string/brand_email"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
</LinearLayout>
