<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_about"
    tools:context=".AboutActivity">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadeScrollbars="true"
        android:fillViewport="true"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarDefaultDelayBeforeFade="@android:integer/config_mediumAnimTime"
        android:scrollbarFadeDuration="@android:integer/config_mediumAnimTime"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/large_gap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large_gap"
                android:layout_marginTop="@dimen/default_gap"
                android:text="@string/au_w_c1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/au_m_h1"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large_gap"
                android:layout_marginTop="@dimen/default_gap"
                android:text="@string/au_m_c1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
